rust/kcl-lib/tests/consumed_solid_binary_add/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing consumed_solid_binary_add.kcl
---
KCL Semantic error

  × semantic: `s1` was already consumed by a `subtract` operation. The
  │ operation result is now in `result`; use that for subsequent operations.
    ╭─[41:12]
 40 │ result = subtract(s1, tools = [s2])
 41 │ combined = s1 + s3
    ·            ───┬───
    ·               ╰── tests/consumed_solid_binary_add/input.kcl
    ╰────
